// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SignUpPage1/> SignUpPage1 Matching SnapShot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontFamily": "Roboto",
        "fontSize": 26,
        "top": "4%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#4285F4",
        }
      }
    >
      F
    </Text>
    <Text
      style={
        Object {
          "color": "#DB4437",
        }
      }
    >
      u
    </Text>
    <Text
      style={
        Object {
          "color": "#F4B400",
        }
      }
    >
      n
    </Text>
    <Text
      style={
        Object {
          "color": "#4285F4",
        }
      }
    >
      d
    </Text>
    <Text
      style={
        Object {
          "color": "#0F9D58",
        }
      }
    >
      o
    </Text>
    <Text
      style={
        Object {
          "color": "#DB4437",
        }
      }
    >
      o
    </Text>
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontSize": 24,
        "top": "5%",
      }
    }
  >
    Create a Fundoo Account
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontSize": 18,
        "top": "6%",
      }
    }
  >
    Enter your name
  </Text>
  <View
    style={
      Object {
        "flex": 9,
        "flexDirection": "column",
        "margin": "8%",
        "top": "5%",
      }
    }
  >
    <View>
      <OutlinedTextField
        activeLineWidth={2}
        animationDuration={225}
        autoCapitalize="sentences"
        baseColor="rgba(0, 0, 0, .38)"
        disableFullscreenUI={true}
        disabled={false}
        disabledLineType="dotted"
        disabledLineWidth={0.5}
        editable={true}
        errorColor="red"
        fontSize={16}
        label="First name"
        labelFontSize={12}
        lineType="solid"
        lineWidth={1}
        onChangeText={[Function]}
        testID="testFirstName"
        textColor="rgba(0, 0, 0, .87)"
        tintColor="rgb(0, 145, 234)"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "flex": 0,
          "top": "3%",
        }
      }
    >
      <OutlinedTextField
        activeLineWidth={2}
        animationDuration={225}
        autoCapitalize="sentences"
        baseColor="rgba(0, 0, 0, .38)"
        disableFullscreenUI={true}
        disabled={false}
        disabledLineType="dotted"
        disabledLineWidth={0.5}
        editable={true}
        errorColor="red"
        fontSize={16}
        label="Last name"
        labelFontSize={12}
        lineType="solid"
        lineWidth={1}
        onChangeText={[Function]}
        testID="testLastName"
        textColor="rgba(0, 0, 0, .87)"
        tintColor="rgb(0, 145, 234)"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "flex-end",
        "flex": 1,
        "padding": "6%",
        "width": 180,
      }
    }
  >
    <ForwardRef(Themed.Button)
      onPress={[Function]}
      testID="testNextButton1"
      title="Next"
    />
  </View>
</View>
`;

exports[`<SignUpPage2/> SignUpPage2 Matching SnapShot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontFamily": "Roboto",
        "fontSize": 26,
        "top": "4%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#4285F4",
        }
      }
    >
      F
    </Text>
    <Text
      style={
        Object {
          "color": "#DB4437",
        }
      }
    >
      u
    </Text>
    <Text
      style={
        Object {
          "color": "#F4B400",
        }
      }
    >
      n
    </Text>
    <Text
      style={
        Object {
          "color": "#4285F4",
        }
      }
    >
      d
    </Text>
    <Text
      style={
        Object {
          "color": "#0F9D58",
        }
      }
    >
      o
    </Text>
    <Text
      style={
        Object {
          "color": "#DB4437",
        }
      }
    >
      o
    </Text>
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontSize": 24,
        "top": "5%",
      }
    }
  >
    Choose your Fundoo address
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontSize": 18,
        "top": "6%",
      }
    }
  >
    Create your own
  </Text>
  <View
    style={
      Object {
        "flex": 9,
        "flexDirection": "column",
        "margin": "8%",
        "top": "5%",
      }
    }
  >
    <View>
      <OutlinedTextField
        activeLineWidth={2}
        animationDuration={225}
        autoCapitalize="sentences"
        baseColor="rgba(0, 0, 0, .38)"
        disableFullscreenUI={true}
        disabled={false}
        disabledLineType="dotted"
        disabledLineWidth={0.5}
        editable={true}
        errorColor="red"
        fontSize={16}
        label="Email"
        labelFontSize={12}
        lineType="solid"
        lineWidth={1}
        onChangeText={[Function]}
        testID="testEmail2"
        textColor="rgba(0, 0, 0, .87)"
        tintColor="rgb(0, 145, 234)"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "flex-end",
        "flex": 1,
        "padding": "6%",
        "width": 180,
      }
    }
  >
    <ForwardRef(Themed.Button)
      onPress={[Function]}
      testID="testNextButton2"
      title="Next"
    />
  </View>
</View>
`;

exports[`<SignUpPage3/> SignUpPage3 Matching SnapShot 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontFamily": "Roboto",
        "fontSize": 26,
        "top": "4%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#4285F4",
        }
      }
    >
      F
    </Text>
    <Text
      style={
        Object {
          "color": "#DB4437",
        }
      }
    >
      u
    </Text>
    <Text
      style={
        Object {
          "color": "#F4B400",
        }
      }
    >
      n
    </Text>
    <Text
      style={
        Object {
          "color": "#4285F4",
        }
      }
    >
      d
    </Text>
    <Text
      style={
        Object {
          "color": "#0F9D58",
        }
      }
    >
      o
    </Text>
    <Text
      style={
        Object {
          "color": "#DB4437",
        }
      }
    >
      o
    </Text>
  </Text>
  <Text
    style={
      Object {
        "alignSelf": "center",
        "flex": 0,
        "fontSize": 24,
        "top": "5%",
      }
    }
  >
    Create a strong password
  </Text>
  <Text
    style={
      Object {
        "flex": 0,
        "fontSize": 15,
        "marginLeft": "8%",
        "marginRight": "8%",
        "textAlign": "center",
        "top": "7%",
      }
    }
  >
    Create a strong password with a mix of letters, numbers and symbols
  </Text>
  <View
    style={
      Object {
        "flex": 9,
        "flexDirection": "column",
        "margin": "8%",
        "top": "5%",
      }
    }
  >
    <View
      style={
        Object {
          "top": 10,
        }
      }
    >
      <OutlinedTextField
        activeLineWidth={2}
        animationDuration={225}
        autoCapitalize="sentences"
        baseColor="rgba(0, 0, 0, .38)"
        disableFullscreenUI={true}
        disabled={false}
        disabledLineType="dotted"
        disabledLineWidth={0.5}
        editable={true}
        errorColor="red"
        fontSize={16}
        label="Password"
        labelFontSize={12}
        lineType="solid"
        lineWidth={1}
        onChangeText={[Function]}
        secureTextEntry={true}
        testID="testPassword2"
        textColor="rgba(0, 0, 0, .87)"
        tintColor="rgb(0, 145, 234)"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "top": 20,
        }
      }
    >
      <OutlinedTextField
        activeLineWidth={2}
        animationDuration={225}
        autoCapitalize="sentences"
        baseColor="rgba(0, 0, 0, .38)"
        disableFullscreenUI={true}
        disabled={false}
        disabledLineType="dotted"
        disabledLineWidth={0.5}
        editable={true}
        errorColor="red"
        fontSize={16}
        label="Confirm"
        labelFontSize={12}
        lineType="solid"
        lineWidth={1}
        onChangeText={[Function]}
        secureTextEntry={true}
        testID="testConfirmPassword"
        textColor="rgba(0, 0, 0, .87)"
        tintColor="rgb(0, 145, 234)"
        underlineColorAndroid="transparent"
        value=""
      />
    </View>
    <View
      style={
        Object {
          "top": 10,
        }
      }
    >
      <Themed.CheckBox
        checked={false}
        containerStyle={
          Object {
            "backgroundColor": "#fff",
            "borderColor": "#fff",
            "right": 7,
          }
        }
        onPress={[Function]}
        testID="testPassVisibility2"
        title="Show password"
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "flex-end",
        "flex": 1,
        "padding": "6%",
        "width": 180,
      }
    }
  >
    <ForwardRef(Themed.Button)
      onPress={[Function]}
      testID="testNextButton3"
      title="Next"
    />
  </View>
</View>
`;
